# blag

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  script.js
.cargo/: config.toml
.github/workflows/: main.yaml  test.yaml  testing.yaml
sql/: 001.sql
src/: app_state.rs  auth.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  routes.rs
src/routes/: api.rs  main.rs  pages.rs  ui.rs
